# learn_swarn

./: README.md  calc_24_points.py  game_helpers.py  play_24_points_game_v1.py  play_24_points_game_v2.py  pyproject.toml  test_swarm.py
