[tool.poetry]
name = "learn-swarn"
version = "0.1.0"
description = ""
authors = ["john_qh <john_qh@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysocks = "^1.7.1"
socksio = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
